[package]
name = "pikadick-slash-framework"
version = "0.0.0"
edition = "2021"
license = "MIT"

[dependencies]
pikadick-slash-framework-derive = { path = "../pikadick-slash-framework-derive-rs" }
thiserror = "1.0.37"
tracing = "0.1.37"
twilight-http = { version = "0.13.0", default-features = false }
twilight-model = { version = "0.13.0", default-features = false }
twilight-util = { version = "0.13.0", features = [ "builder" ], default-features = false }
