[package]
name = "pikadick-system-info"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cfg-if = "1.0.3"
once_cell = "1.21.3"
platforms = "3.6.0"
thiserror = "2.0.16"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = [ "Win32_System_SystemInformation", "Win32_System_WindowsProgramming", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_SystemServices", "Win32_System_Threading" ] }
bitflags = "2.9.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30.1", features = [ "hostname", "feature" ], default-features = false }
libc = "0.2.175"

[dev-dependencies]
time = { version = "0.3.41", features = [ "local-offset" ] }
