[package]
name = "pikadick-system-info"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cfg-if = "1.0.4"
once_cell = "1.21.3"
platforms = "3.7.0"
thiserror = "2.0.17"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [ "Win32_System_SystemInformation", "Win32_System_WindowsProgramming", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_SystemServices", "Win32_System_Threading", "Wdk_System_SystemServices" ] }
bitflags = "2.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30.1", features = [ "hostname", "feature" ], default-features = false }
libc = "0.2.177"

[dev-dependencies]
time = { version = "0.3.44", features = [ "local-offset" ] }
