[package]
name = "pikadick-util"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1.0.68", optional = true }
cfg-if = { version = "1.0.0", optional = true }
fd-lock = { version = "3.0.8", optional = true }
# fslock = { version = "0.2.1", optional = true }
fslock = { git = "https://github.com/adumbidiot/fslock", optional = true }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs" }
reqwest = { version = "0.11.13", default-features = false, optional = true }
tokio = { version = "1.23.1", default-features = false, optional = true }
tracing = { version = "0.1.37", optional = true }

[dev-dependencies]
tokio = { version = "1.23.1", features = [ "macros" ] }
reqwest = { version = "0.11.13", default-features = false, features = [ "default-tls" ] }

[features]
arc_anyhow_error = ["anyhow"]
async_lock_file = ["anyhow", "fslock", "tokio", "tokio/sync", "tokio/rt"]
drop_remove_file = ["tokio", "tokio/fs", "tokio/rt", "nd-util/drop-remove-path"]
