[package]
name = "quizizz"
version = "0.0.0"
authors = [ "ProfessionalProgrammers <rusty.bois.bios.rusty@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.11.24", default-features = false, features = [ "json" ] }
serde = { version = "1.0.196", features = [ "derive" ] }
serde_json = "1.0.113"
thiserror = "1.0.59"

[dev-dependencies]
tokio = { version = "1.36.0", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
