[package]
name = "quizizz"
version = "0.0.0"
authors = [ "ProfessionalProgrammers <rusty.bois.bios.rusty@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = [ "json" ] }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.143"
thiserror = "2.0.16"

[dev-dependencies]
tokio = { version = "1.47.1", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
