[package]
name = "r6stats"
version = "0.0.0"
authors = [ "ProfessionalProgrammers <rusty.bois.bios.rusty@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.23", default-features = false }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.143"
thiserror = "2.0.16"
time = { version = "0.3.41", features = [ "serde-well-known" ] }
url = { version = "2.5.4", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.47.1", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
