[package]
name = "r6stats"
version = "0.0.0"
authors = [ "ProfessionalProgrammers <rusty.bois.bios.rusty@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.24", default-features = false }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = { version = "0.3.44", features = [ "serde-well-known" ] }
url = { version = "2.5.7", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.48.0", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
