[package]
name = "r6tracker"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.11.20", default-features = false, features = [ "json" ] }
serde = { version = "1.0.188", features = [ "derive" ] }
serde_json = "1.0.105"
thiserror = "1.0.47"
url = { version = "2.4.1", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.32.0", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
