[package]
name = "reddit-tube"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.19.0"
reqwest = { version = "0.11.24", default-features = false, features = [ "cookies", "json" ] }
scraper = { version = "0.18.1", default-features = false }
serde = { version = "1.0.196", features = [ "derive" ] } 
serde_json = "1.0.113"
thiserror = "1.0.59"
tokio = { version = "1.36.0", features = [ "rt" ] }
url = { version = "2.5.0", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.36.0", features = [ "macros" ] }

[features]
default = ["reqwest/default-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
