[package]
name = "reddit-tube"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.21.3"
reqwest = { version = "0.12.23", default-features = false, features = [ "cookies", "json" ] }
scraper = { version = "0.19.1", default-features = false }
serde = { version = "1.0.219", features = [ "derive" ] } 
serde_json = "1.0.143"
thiserror = "1.0.69"
tokio = { version = "1.47.1", features = [ "rt" ] }
url = { version = "2.5.4", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.47.1", features = [ "macros" ] }

[features]
default = ["reqwest/default-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
