[package]
name = "reddit-tube"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.21.3"
reqwest = { version = "0.12.24", default-features = false, features = [ "cookies", "json" ] }
scraper = { version = "0.24.0", default-features = false }
serde = { version = "1.0.228", features = [ "derive" ] } 
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [ "rt" ] }
url = { version = "2.5.7", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.48.0", features = [ "macros" ] }

[features]
default = ["reqwest/default-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
