[package]
name = "rpi-deploy"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
argh = "0.1.13"
cargo_metadata = "0.23.0"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.143"
ssh2 = { version = "0.9.5", features = [ "vendored-openssl", "openssl-on-win32" ] }
toml = "0.9.8"
rand = "0.9.2"
indicatif = "0.18.1"
camino = "1.1.11"
