[package]
name = "rule34"
version = "0.0.0"
authors = [ "ProfessionalProgrammers <rusty.bois.bios.rusty@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rule34"
required-features = [ "cli" ]
path = "src/cli/main.rs"

[dependencies]
itoa = "1.0.9"
once_cell = { version = "1.18.0", features = [ "std" ], default-features = false }
quick-xml = { version = "0.30.0", features = [ "serialize" ] }
reqwest = { version = "0.11.18", default-features = false, features = [ "json", "brotli" ] }
scraper = { version = "0.17.1", default-features = false }
serde = { version = "1.0.183", features = [ "derive" ] }
thiserror = "1.0.46"
tokio = "1.32.0"
url = { version = "2.4.0", features = [ "serde" ] }
serde_json = "1.0.105"

# Optional
argh = { version = "0.1.12", optional = true }
anyhow = { version = "1.0.74", optional = true }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", features = [ "download-to-path" ], optional = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = [ "macros" ] }

[features]
# Use reqwest's default by default.
default = ["default-tls"]

# Use the default TLS for this platform. 
# This is reqwest's default.
default-tls = ["reqwest/default-tls"]

# Use native-tls for TLS
native-tls = ["reqwest/native-tls"]

# Use rustls for TLS
rustls-tls = ["reqwest/rustls-tls"]

cli = ["argh", "anyhow", "tokio/rt-multi-thread", "tokio/fs", "nd-util"]
