[package]
name = "rule34"
version = "0.0.0"
authors = [ "ProfessionalProgrammers <rusty.bois.bios.rusty@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rule34"
required-features = [ "cli" ]
path = "src/cli/main.rs"

[dependencies]
itoa = "1.0.10"
quick-xml = { version = "0.31.0", features = [ "serialize" ] }
reqwest = { version = "0.12.0", default-features = false, features = [ "json", "brotli" ] }
serde = { version = "1.0.196", features = [ "derive" ] }
thiserror = "1.0.56"
time = { version = "0.3.34", features = [ "serde", "parsing", "formatting", "macros" ], default-features = false }
tokio = "1.36.0"
url = { version = "2.5.0", features = [ "serde" ] }
serde_json = "1.0.113"

# scrape
once_cell = { version = "1.19.0", features = [ "std" ], default-features = false, optional = true }
scraper = { version = "0.18.1", default-features = false, optional = true }

# cli
argh = { version = "0.1.12", optional = true }
anyhow = { version = "1.0.79", optional = true }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", features = [ "download-to-path" ], optional = true }

[dev-dependencies]
tokio = { version = "1.36.0", features = [ "macros" ] }
serde_path_to_error = "0.1.15"

[features]
# Use reqwest's default by default.
default = ["default-tls"]

# Use the default TLS for this platform. 
# This is reqwest's default.
default-tls = ["reqwest/default-tls"]

# Use native-tls for TLS
native-tls = ["reqwest/native-tls"]

# Use rustls for TLS
rustls-tls = ["reqwest/rustls-tls"]

# Whether to include API functions that use scraping.
# Omitting this feature reduces the number of dependencies.
scrape = ["scraper", "once_cell"]

# Whether to enable the CLI
cli = ["argh", "anyhow", "tokio/rt-multi-thread", "tokio/fs", "nd-util", "scrape"]
