[package]
name = "sauce-nao"
version = "0.0.0"
edition = "2018"

[[bin]]
name = "sauce-nao"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
reqwest = { version = "0.11.8", features = [ "json", "stream", "multipart" ] }
serde = { version = "1.0.132", features = [ "derive" ] }
serde_json = "1.0.73"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = [ "fs" ] }
tokio-util = { version = "0.6.9", features = ["codec"] }
url = { version = "2.2.2", features = [ "serde" ] }

# Optional
anyhow = { version = "1.0.51", optional = true }
argh = { version = "0.1.7", optional = true }
dirs-next = { version = "2.0.0", optional = true }
toml = { version = "0.5.8", optional = true }

[dev-dependencies]
tokio = { version = "1.15.0", features = [ "macros" ] }

[features]
default = []
cli = [ 
    "anyhow", 
    "argh",  
    "dirs-next",
    "tokio/rt-multi-thread",
    "toml",
]
