[package]
name = "sauce-nao"
version = "0.0.0"
edition = "2021"
license = "MIT OR APACHE-2.0"

[[bin]]
name = "sauce-nao"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
reqwest = { version = "0.11.10", default-features = false, features = [ "json", "stream", "multipart" ] }
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = [ "fs" ] }
tokio-util = { version = "0.7.0", features = ["codec"] }
url = { version = "2.2.2", features = [ "serde" ] }

# Optional
anyhow = { version = "1.0.56", optional = true }
argh = { version = "0.1.7", optional = true }
dirs-next = { version = "2.0.0", optional = true }
toml = { version = "0.5.8", optional = true }

[dev-dependencies]
tokio = { version = "1.17.0", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

cli = [ 
    "anyhow", 
    "argh",  
    "dirs-next",
    "tokio/rt-multi-thread",
    "toml",
]
