[package]
name = "tic-tac-toe"
version = "0.0.0"
edition = "2018"
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = { version = "0.3.5", features = [ "html_reports" ] } 

[[bench]]
name = "benchmark"
harness = false

# This fails CI as it enables all features for stable clippy
# [features]
# nightly = [ "criterion/real_blackbox" ]