[package]
name = "tiktock"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"

[[bin]]
name = "tiktock"
required-features = [ "cli" ]
path = "src/main.rs"

[dependencies]
open-graph = { path = "../open-graph-rs" }
reqwest = { version = "0.11.3", features = [ "cookies" ] } 
thiserror = "1.0.24"
tokio = "1.5.0"
url = "2.2.2"

# Optional
argh = { version = "0.1.4", optional = true }

[dev-dependencies]
tokio = { version = "1.5.0", features = [ "macros" ] }

[features]
cli = [ 
    "argh", 
    "tokio/rt-multi-thread",
    "tokio/fs",
]
