[package]
name = "tiktok"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "tiktok"
required-features = [ "cli" ]
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11.13", default-features = false, features = [ "cookies", "rustls-tls" ] } 
thiserror = "1.0.38"
tokio = "1.23.0"
scraper = { version = "0.14.0", default-features = false }
once_cell = "1.16.0"
serde_json = "1.0.91"
serde = { version = "1.0.151", features = [ "derive" ] }
url = { version = "2.3.1", features = [ "serde" ] }

# Optional
argh = { version = "0.1.9", optional = true }
anyhow = { version = "1.0.68", optional = true }


[dev-dependencies]
tokio = { version = "1.23.0", features = [ "macros" ] }

[features]
default = []
cli = [ 
    "argh", 
    "anyhow",
    "tokio/rt-multi-thread",
    "tokio/fs",
]
