[package]
name = "tiktok"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "tiktok"
required-features = [ "cli" ]
path = "src/main.rs"

[dependencies]
itoa = "1.0.6"
reqwest = { version = "0.11.18", default-features = false, features = [ "cookies", "rustls-tls", "brotli" ] } 
thiserror = "1.0.40"
tokio = "1.28.2"
scraper = { version = "0.16.0", default-features = false }
once_cell = "1.18.0"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = [ "derive" ] }
url = { version = "2.4.0", features = [ "serde" ] }

# Optional
argh = { version = "0.1.10", optional = true }
anyhow = { version = "1.0.71", optional = true }


[dev-dependencies]
tokio = { version = "1.28.2", features = [ "macros" ] }

[features]
default = []
cli = ["argh", "anyhow", "tokio/rt-multi-thread", "tokio/fs"]
