[package]
name = "tiktok"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "tiktok"
required-features = [ "cli" ]
path = "src/main.rs"

[dependencies]
itoa = "1.0.9"
reqwest = { version = "0.11.20", default-features = false, features = [ "cookies", "rustls-tls", "brotli" ] } 
thiserror = "1.0.48"
tokio = "1.32.0"
scraper = { version = "0.17.1", default-features = false }
once_cell = "1.18.0"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = [ "derive" ] }
url = { version = "2.4.1", features = [ "serde" ] }

# Optional
argh = { version = "0.1.12", optional = true }
anyhow = { version = "1.0.75", optional = true }


[dev-dependencies]
tokio = { version = "1.32.0", features = [ "macros" ] }

[features]
default = []
cli = ["argh", "anyhow", "tokio/rt-multi-thread", "tokio/fs"]
