[package]
name = "tokio-ffmpeg-cli"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "2.5.0"
futures = { version = "0.3.30", features = [ "std" ], default-features = false }
once_cell = "1.19.0"
regex = "1.10.4"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = [ "process" ] }
tokio-stream = { version = "0.1.15", features = [ "io-util" ] }
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.37.0", features = [ "rt", "macros" ] }
