[package]
name = "tokio-ffmpeg-cli"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "2.9.2"
futures = { version = "0.3.31", features = [ "std" ], default-features = false }
once_cell = "1.21.3"
regex = "1.11.1"
thiserror = "1.0.69"
tokio = { version = "1.47.1", features = [ "process" ] }
tokio-stream = { version = "0.1.17", features = [ "io-util" ] }
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.47.1", features = [ "rt", "macros" ] }
