[package]
name = "tokio-ffmpeg-cli"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "2.10.0"
futures = { version = "0.3.31", features = [ "std" ], default-features = false }
once_cell = "1.21.3"
regex = "1.12.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [ "process" ] }
tokio-stream = { version = "0.1.17", features = [ "io-util" ] }
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = [ "rt", "macros" ] }
