[package]
name = "urban-dictionary"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.11.11", default-features = false, features = [ "json" ] }
serde = { version = "1.0.139", features = [ "derive" ] }
serde_json = "1.0.82"
thiserror = "1.0.31"
url = { version = "2.2.2", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.19.2", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
