[package]
name = "urban-dictionary"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.11.24", default-features = false, features = [ "json" ] }
serde = { version = "1.0.194", features = [ "derive" ] }
serde_json = "1.0.110"
thiserror = "1.0.56"
url = { version = "2.5.0", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.35.1", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
