[package]
name = "xkcd"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.3", default-features = false }
thiserror = "1.0.58"

[dev-dependencies]
tokio = { version = "1.37.0", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
